<resources>
    <string name="app_name">萧离</string>
    <string name="demo_label">乱七八糟</string>
    <!--引导页-->
    <string name="guide_btn_start">开始体验</string>
    <!-- 登录 -->
    <string name="login_user_hint">请输入用户名</string>
    <string name="login_pwd_hint">请输入密码</string>
    <string name="login">登录</string>

    <!--主页-->
    <string name="main_label">主页</string>
    <string name="main_subtitle">欢迎来到萧离的代码工厂</string>
    <string name="main_btn_demo">查看</string>

    <!--自定义ListView-->
    <string name="DropDownListView_label">自定义ListView</string>
    <string name="update_at">更新于:&#160;</string>

    <!--倾斜标签-->
    <string name="slanted_label">倾斜标签</string>

    <!--悬浮球-->
    <string name="floatfall_label">悬浮球</string>
    <string name="floatfall_mBtnStart">启动</string>
    <string name="floatfall_mBtnCanel">取消</string>

    <!--圆角图片-->
    <string name="shape_image_label">圆角图片</string>

    <!--自动轮播Binner-->
    <string name="binner_label">自动轮播Binner</string>

    <!--自定义相机-->
    <string name="camera_label">自定义相机</string>

    <!--拼图-->
    <string name="puzzle_label">小屁股拼拼</string>
    <string name="puzzle_previou">上一张</string>
    <string name="puzzle_next">下一张</string>
    <string name="puzzle_select">选择图片</string>
</resources>