<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <com.xiaoli.library.View.TitleBarLayout
        android:id="@+id/mTitleBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleBarTitle="@string/floatfall_label"
        app:titleBarBackgroundLeft="@drawable/shape_login_btn"
        />
    <Button
        android:id="@+id/mBtnStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/mTitleBarLayout"
        android:text="@string/floatfall_mBtnStart"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/floatfall_mBtnCanel"
        android:id="@+id/mBtnCanel"
        android:layout_marginLeft="37dp"
        android:layout_marginStart="37dp"
        android:layout_below="@+id/mTitleBarLayout"
        android:layout_toRightOf="@+id/mBtnStart"
        android:layout_toEndOf="@+id/mBtnStart" />


</RelativeLayout>
