<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <com.xiaoli.library.View.TitleBarLayout
        android:id="@+id/mTitleBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleBarTitle="@string/puzzle_label"
        app:titleBarBackgroundLeft="@drawable/shape_login_btn"
        />
    <com.xiaolidemo.game.PuzzleView
        android:id="@+id/mPuzzleView"
        android:layout_below="@id/mTitleBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent"/>


    <ImageView
        android:id="@+id/mIvPreview"
        android:layout_below="@id/mPuzzleView"
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <Button
        android:id="@+id/mBtnPreviou"
        android:layout_below="@id/mPuzzleView"
        android:layout_toRightOf="@id/mIvPreview"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/shape_login_btn"
        android:text="@string/puzzle_previou"
        android:textColor="@android:color/white"
        android:textSize="18dp" />

    <Button
        android:id="@+id/mBtnNext"
        android:layout_below="@id/mBtnPreviou"
        android:layout_alignLeft="@id/mBtnPreviou"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/shape_login_btn"
        android:text="@string/puzzle_next"
        android:textColor="@android:color/white"
        android:textSize="18dp" />

    <Button
        android:id="@+id/mBtnSelect"
        android:layout_below="@id/mBtnNext"
        android:layout_alignLeft="@id/mBtnPreviou"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/shape_login_btn"
        android:text="@string/puzzle_select"
        android:textColor="@android:color/white"
        android:textSize="18dp" />


</RelativeLayout>
